fix z-index

--- a/styles.css
+++ b/styles.css
@@ -88,6 +88,7 @@ body {
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.33));
   -webkit-user-select: none;
   user-select: none;
+  z-index: 200;
 }
 
 .btn:hover {
@@ -236,6 +237,8 @@ body {
   bottom: 100px;
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
+
+  z-index: 150;
 }
 
 #list {
